# QtGraphicsViewDemo

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json
src/: custom_graphics_view.cpp  custom_graphics_view.h  main.cpp  mainwindow.cpp  mainwindow.h
src/tools/: circle_tool.cpp  circle_tool.h  detection_result.h  itool.h  line_tool.cpp  line_tool.h  point_tool.cpp  point_tool.h
